Fixed banner visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -371,6 +371,9 @@ footer{
 }
 
 
+.fixed-hidden{
+  opacity: 0;
+}
 
 
   #menubar, label[for="menubar"]{
